2015-07-01  Andy Buckley  <andy.buckley@cern.ch>

	* Remove FastJets::ySubJet, splitJet, and filterJet methods --
	they're BDRS-paper-specific and you can now use the FastJet
	objects directly to do this and much more.

	* Adding InvisiblesStrategy to JetAlg, using it rather than a bool
	in the useInvisibles method, and updating FastJets to use this
	approach for its particle filtering and to optionally use the enum
	in the constructor arguments. The new default invisibles-using
	behaviour is to still exclude _prompt_ invisibles, and the default
	is still to exclude them all. Only one analysis
	(src/Analyses/STAR_2006_S6870392.cc) required updating, since it
	was the only one to be using the FastJets legacy seed_threshold
	constructor argument.

	* Adding isVisible method to Particle, taken from
	VisibleFinalState (which now uses this).

2015-06-30  Andy Buckley  <andy.buckley@cern.ch>

	* Marking many old & superseded ATLAS analyses as obsolete.

	* Adding cmpMomByMass and cmpMomByAscMass sorting functors.

	* Bump version to 2.3.0 and require YODA > 1.4.0 (current head at
	time of development).

2015-06-08  Andy Buckley  <andy.buckley@cern.ch>

	* Add handling of -m/-M flags on rivet-cmphistos and rivet-mkhtml,
	moving current rivet-mkhtml -m/-M to -a/-A (for analysis name
	pattern matching). Requires YODA head (will be YODA 1.3.2 of
	1.4.0).

	* src/Analyses/ATLAS_2015_I1364361.cc: Now use the built-in prompt
	photon selecting functions.

	* Tweak legend positions in MC_JETS .plot file.

	* Add a bit more debug output from ZFinder and WFinder.

2015-05-24  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Normalisation discussion concerning ATLAS_2014_I1325553
	is resolved. Changed YLabel accordingly.

2015-05-19  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add (preliminary) ATLAS combined Higgs analysis
	(ATLAS_2015_I1364361). Data will be updated and more
	histos added as soon as paper is published in journal.
	For now using data taken from public ressource